--- a/ansible.cfg
+++ b/ansible.cfg
@@ -19,13 +19,15 @@ inventory      = /etc/ansible/hosts
 #plugin_filters_cfg = /etc/ansible/plugin_filters.yml
 #forks          = 5
 #poll_interval  = 15
-sudo_user      = root
+#sudo_user      = root
 #ask_sudo_pass = True
 #ask_pass      = True
 #transport      = smart
 #remote_port    = 22
 #module_lang    = C
 #module_set_locale = False
+become_user = root
+
 
 # plays will gather facts by default, which contain information about
 # the remote system.
@@ -355,7 +357,7 @@ private_key_file = /home/vagrant/.ssh/id_rsa.pub
 # ssh arguments to use
 # Leaving off ControlPersist will result in poor performance, so use
 # paramiko on older platforms rather than removing it, -C controls compression use
-#ssh_args = -C -o ControlMaster=auto -o ControlPersist=60s
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o ForwardAgent=yes
 
 # The base directory for the ControlPath sockets.
 # This is the "%(directory)s" in the control_path option
