--- a/mezzanine.yml
+++ b/mezzanine.yml
@@ -1,180 +1,148 @@
 ---
-
 - name: Deploy mezzanine
   hosts: web
   vars:
-    user: "{{ ansible_ssh_user}}"
-    proj_name: mezzanine-example
-    venv_home: "{{ ansible_env.HOME }}"
+    user: "{{ ansible_user }}"
+    proj_app: mezzanine_example
+    proj_name: "{{ proj_app }}"
+    venv_home: "{{ ansible_env.HOME }}/.virtualenvs"
     venv_path: "{{ venv_home }}/{{ proj_name }}"
-    proj_dirname: project
-    proj_path: "{{ venv_path }}/{{ proj_dirname }}"
+    proj_path: "{{ ansible_env.HOME }}/mezzanine/{{ proj_name }}"
+    settings_path: "{{ proj_path }}/{{ proj_name }}"
     reqs_path: requirements.txt
     manage: "{{ python }} {{ proj_path }}/manage.py"
     live_hostname: 172.16.34.11.xip.io
     domains:
       - 172.16.34.11.xip.io
       - www.172.16.34.11.xip.io
-    repo_url: git@github.com:lorin/mezzanine-example.git
-    gunicorn_port: 8000
-    locale: en.US.UTF-8
-    # Mezzanine 中的Fabric 脚本中并不包含下面的变量y
-    # 我在这里定义它们是为了方便起见
-    conf_path: /etc/nginx/
-    tsl_enabled: True
+    repo_url: git@github.com:ansiblebook/mezzanine_example.git
+    locale: en_US.UTF-8
+    # Variables below don't appear in Mezannine's fabfile.py
+    # but I've added them for convenience
+    conf_path: /etc/nginx/conf
+    tls_enabled: True
     python: "{{ venv_path }}/bin/python"
     database_name: "{{ proj_name }}"
     database_user: "{{ proj_name }}"
     database_host: localhost
     database_port: 5432
-    gunicorn_proc_name: mezzanine
+    gunicorn_procname: gunicorn_mezzanine
+    num_workers: "multiprocessing.cpu_count() * 2 + 1"
   vars_files:
     - secrets.yml
   tasks:
-    - name: install apt packages
+    - name: install yum packages
       yum: pkg={{ item }} update_cache=yes
-      sudo: Ture 
+      become: True
       with_items:
-        - "{{ git }}"
-        - "{{ libjpeg-dev }}"
-        - "{{ libpq-dev }}"
-        - "{{ memcached }}"
-        - "{{ nginx }}" 
-        - "{{ postgresql }}"
-        - "{{ python-dev }}"
-        - "{{ python-pip }}"
-        - "{{ python-psycopg2 }}"
-        - "{{ python-setuptools }}"
-        - "{{ python-virtualenv }}"
-        - "{{ supervisor }}"
-
+#        - git
+        - libjpeg-turbo-devel
+        - libpqxx-devel
+        - memcached
+        - nginx
+        - postgresql
+        - python-devel
+        - python-pip
+        - python-psycopg2
+        - python-setuptools
+        - python-virtualenv
+        - supervisor
+    - name: create project path
+      file: path={{ proj_path }} state=directory
+    - name: create a logs directory
+      file:
+        path: "{{ ansible_env.HOME }}/logs"
+        state: directory
     - name: check out the repository on the host
       git: repo={{ repo_url }} dest={{ proj_path }} accept_hostkey=yes
-
+    - name: install Python requirements globally via pip
+      pip: name={{ item }} state=latest
+      with_items:
+        - pip
+        - virtualenv
+        - virtualenvwrapper
+      become: True
+    - name: create project locale
+      locale_gen: name={{ locale }}
+      become: True
+    - name: create a DB user
+      postgresql_user:
+        name: "{{ database_user }}"
+        password: "{{ db_pass }}"
+      become: True
+      become_user: postgres
+    - name: create the database
+      postgresql_db:
+        name: "{{ database_name }}"
+        owner: "{{ database_user }}"
+        encoding: UTF8
+        lc_ctype: "{{ locale }}"
+        lc_collate: "{{ locale }}"
+        template: template0
+      become: True
+      become_user: postgres
+    - name: ensure config path exists
+      file: path={{ conf_path }} state=directory
+      become: True
+    - name: create tls certificates
+      command: >
+        openssl req -new -x509 -nodes -out {{ proj_name }}.crt
+        -keyout {{ proj_name }}.key -subj '/CN={{ domains[0] }}' -days 3650
+        chdir={{ conf_path }}
+        creates={{ conf_path }}/{{ proj_name }}.crt
+      become: True
+      when: tls_enabled
+      notify: restart nginx
+    - name: set the nginx config file
+      template: src=templates/nginx.conf.j2 dest=/etc/nginx/nginx.conf
+      notify: restart nginx
+      become: True
+    - name: set the supervisor config file
+      template: src=templates/supervisor.conf.j2 dest=/etc/supervisor/conf.d/mezzanine.conf
+      become: True
+      notify: restart supervisor
+    - name: install poll twitter cron job
+      cron: name="poll twitter" minute="*/5" user={{ user }} job="{{ manage }} poll_twitter"
+    - name: set the gunicorn config file
+      template: src=templates/gunicorn.conf.py.j2 dest={{ proj_path }}/gunicorn.conf.py
+    - name: generate the settings file
+      template: src=templates/local_settings.py.j2 dest={{ settings_path }}/local_settings.py
+    - name: install requirements.txt
+      pip: requirements={{ proj_path }}/{{ reqs_path }} virtualenv={{ venv_path }}
     - name: install required python packages
       pip: name={{ item }} virtualenv={{ venv_path }}
       with_items:
         - gunicorn
         - setproctitle
-        - south
         - psycopg2
         - django-compressor
         - python-memcached
-
-    - name: install requirements.txt
-      pip: requirements={{ proj_path }}/{{ reqs_path }} virtualenv={{ venv_path }}
-
-    - name: create a user 
-      postgresql_db:
-        name: "{{ database_name }}"
-        password: "{{ db_pass }}"
-      sudo: True
-      sudo_user: postgres
-
-    - name: generate the settings file 
-      postgresql_db:   
-        name: "{{ database_name }}"
-        password: "{{ db_pass }}" 
-        encoding: UTF8
-        lc_ctype: "{{ locale }}" 
-        lc_collate: "{{ locale }}"
-        template: template0
-      sudo: True
-      sudo_user: postgres
-
-    - name: generate the settings file
-      template:
-        src:templates/local_settings.py.j2
-        dest:"{{ proj_path }}/local_settings.py"
-
-    - name: sync the database, apply migrations, collect static content
+    - name: apply migrations to create the database, collect static content
       django_manage:
-        command: "{{ item }}"  
+        command: "{{ item }}"
         app_path: "{{ proj_path }}"
         virtualenv: "{{ venv_path }}"
       with_items:
-       - syncdb
-       - migrate
-       - collectstatic
-
+        - migrate
+        - collectstatic
     - name: set the site id
       script: scripts/setsite.py
       environment:
         PATH: "{{ venv_path }}/bin"
         PROJECT_DIR: "{{ proj_path }}"
+        PROJECT_APP: "{{ proj_app }}"
         WEBSITE_DOMAIN: "{{ live_hostname }}"
-
     - name: set the admin password
       script: scripts/setadmin.py
       environment:
         PATH: "{{ venv_path }}/bin"
         PROJECT_DIR: "{{ proj_path }}"
+        PROJECT_APP: "{{ proj_app }}"
         ADMIN_PASSWORD: "{{ admin_pass }}"
-
-    - name: set the gunicorn config file
-      template:
-        src:templates/gunicorn.conf.j2
-        dest:"{{ proj_path}}/gunicorn.conf.py"
-
-    - name: set supervisor config file 
-      template:
-        src:templates/supervisor.conf.j2
-        dest:/etc/supervisor/conf.d/mezzanine.conf
-
-    - name: set the nginx config file
-      template:
-        src:templates/nginx.conf.j2
-        dest:/etc/nginx/nginx-mezzanine.conf
-      notify: restart nginx
-      sudo: Ture
-
-#    - name: enable the nginx config file
-#      file:
-#        src: /etc/nginx/sites-available/nginx-mezzanine.conf
-#        dest: /etc/nginx/sites-enabled/nginx-mezzanine.conf
-#      notify: restart nginx
-#      sudo: Ture  
-#    ubantu使用配置
- 
-#     - name: remove the default nginx config file
-#       file: path=/etc/nginx/sites-enabled/default state=absent
-#       notify: restart nginx
-#       sudo: Ture
-#       ubantu使用配置
-
-    - name: ensure config path exists
-      file: path={{ conf_path }} state=directory
-      sudo: True
-      when: tsl_enabled   
-    
-    - name: create ssl certificates
-      command: >
-        openssl req -new -x509 -nodes -out {{ proj_name }}.crt
-        -keyout {{ proj_name }}.key -subj '/CN{{ domains[0] }}' -days 3650
-        chdir={{ conf_path }}/{{ proj_name}}.crt
-      sudo: True
-      when: tsl_enabled
-      notify: restart nginx
-
-    - name: install poll twitter cron job 
-      cron: name="poll twitter" minute"*/5" user={{ user }}
-        job="{{ manage }} poll_twitter"
-
   handlers:
-    - name: restart supervisor 
-      supervisorctl: name=gunicorn_mezzanine state=restarted
-      sudo: True
-    
+    - name: restart supervisor
+      supervisorctl: "name={{ gunicorn_procname }} state=restarted"
+      become: True
     - name: restart nginx
-      service: name=nignx state=restarted
-      sudo: True
-  
-
-
-
-
-
-
-
-
-
+      service: name=nginx state=restarted
+      become: True
